--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -7,3 +7,13 @@
     color: blue;
     font-size: 36px;
 }
+
+#third-element{
+    font-size: 24px;
+}
+
+#fourth-element{
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: 700;
+}
