--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,6 +2,7 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
+  justify-content: space-between;
 }
 
 .logo {
@@ -15,6 +16,8 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  
 }
 
 a {
