--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -3,6 +3,7 @@
   background: papayawhip;
   display: flex;
   justify-content: space-between;
+  padding: 10px;
 }
 
 .logo {
@@ -17,6 +18,7 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  justify-content: space-around;
   
 }
 
@@ -26,4 +28,8 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+li {
+  margin-right: 10px;
 }
