--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -19,7 +19,9 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
   
 }
 
@@ -31,6 +33,3 @@ a {
   text-decoration: none;
 }
 
-li {
-  margin-right: 10px;
-}
