--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,7 +10,6 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  text-align: center;
   margin-bottom: 32px;
 }
 
@@ -24,10 +23,12 @@ img {
 .flower{
   align-items: center;
   justify-content: center;
-  text-align: center;
   width: 200px;
 }
 
+body{
+  text-align: center;
+}
 
 
 
