--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,6 +21,8 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   padding: 20px;
+  display: flex;
+  justify-content: space-between
 }
 
 .icon {
@@ -34,6 +36,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  
+  
+  
 }
 
 .close-button {
@@ -68,4 +74,9 @@ button.cancel {
 
 .header{
   font-weight: 700;
+}
+
+.right-top{
+  display: flex;
+  justify-content: space-between;
 }
