Made list items side by side instead of vertical and created gaps in between

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -27,8 +27,15 @@ input {
 }
 
 ul{
-  list-style-type: none
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
 }
+
 a{
   text-decoration: none;
+}
+
+.header{
+  display: flex;
 }
