--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  text-align: center;
 }
 
 img {
@@ -30,6 +31,7 @@ ul{
   list-style-type: none;
   display: flex;
   gap: 10px;
+  justify-content: space-around;
 }
 
 a{
