Fix padding and margin on the header

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -31,7 +31,8 @@ ul{
   list-style-type: none;
   display: flex;
   gap: 10px;
-  justify-content: space-around;
+  padding: 0;
+  margin: 10px;
 }
 
 a{
@@ -40,4 +41,7 @@ a{
 
 .header{
   display: flex;
+  justify-content: space-between;
 }
+
+
