Footer is completed , put display flex on body with direction column the use content to have flex 1 to fill in the space to push the footer down

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -44,4 +44,18 @@ a{
   justify-content: space-between;
 }
 
+.footer{
+  display: flex;
+  justify-content: space-between;
+  background-color: lightgrey;
+  align-items: flex-end;
+}
 
+body{
+  display: flex;
+  flex-direction: column;
+}
+
+.content{
+  flex: 1;
+}
