--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -8,6 +8,12 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font: 900;
+  align-items: center;
+  padding-left: 16px;
+  padding-top: 16px;
+  height: 55px;
 }
 
 .footer {
