--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -25,6 +25,8 @@ body {
 .sidebar {
   width: 300px;
   background: royalblue;
+  padding: 16px;
+  flex-shrink: 0;
 }
 
 .card {
@@ -36,6 +38,30 @@ body {
 ul{
   list-style-type: none;
 }
+li{
+  font-size: 24px;
+  margin-top: 10px;
+}
+a{
+  color: white;
+}
+
 a{
   text-decoration: none;
+}
+
+.big-container{
+  display: flex;
+}
+
+.card{
+  height: 300px;
+  width: 300px;
+  margin: 20px;
+  padding: 32px;
+}
+
+.card-holder{
+  display: flex;
+  flex-wrap: wrap;
 }
