--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -52,11 +52,12 @@ a{
 
 .big-container{
   display: flex;
+  flex: 1;
 }
 
 .card{
-  height: 300px;
-  width: 300px;
+  height: 250px;
+  width: 250px;
   margin: 20px;
   padding: 32px;
 }
@@ -64,4 +65,13 @@ a{
 .card-holder{
   display: flex;
   flex-wrap: wrap;
+}
+
+.footer{
+  text-align: center;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
 }
